# DEDS_PORTFOLIO-Week4-5

./: .env.example  Export-Script.py  Great_Outdoors.html  Great_Outdoors.ipynb  README.md  database.sql  main.py  processing.py  pyproject.toml  rename.json  settings.py  tableutils.py  test.py
data/: database.sql  go_crm.accdb
